--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         />
         <!-- Main Styles -->
         <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="css/media-queries.css">
     </head>
     <body>
         <!--
